# mevfork

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml  pypi.yml
src/meval/: __init__.py
