[project]
name = "mevfork"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hackintosh 5", email = "hackintoshfive@gmail.com" },
    { name = "zxcdiana" },
    { name = "zeticsce" },
    { name = "lucifer" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
keywords = [
    "async",
    "eval",
    "meval",
]

[project.urls]
Homepage = "https://github.com/jonesroot/mevfork.git"
"Based on" = "https://github.com/penn5/meval"

[build-system]
requires = ["uv_build~=0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "meval"
